--- a/style.css
+++ b/style.css
@@ -10,18 +10,21 @@ a {
 }
 
 img {
-    width: 100%;
+    width: 80%;
     height: auto;
 }
 
 /* ==== Variables =====================================*/
 :root {
-    --hue: 159;
+    --header-height: 4.5rem;
+
+    /* ==== Colors ==== */
+    --hue: 310;
     /* HSL color mode */
-    --base-color: hsl(var(--hue), 39%, 57%);
-    --base-color-second: hsl(var(--hue), 65%, 88%);
-    --base-color-alt: hsl(var(--hue), 57%, 53%);
-    --title-color: hsl(var(--hue), 41%, 10%);
+    --base-color: hsl(var(--hue) 36% 57%);
+    --base-color-second: hsl(var(--hue) 65% 88%);
+    --base-color-alt: hsl(var(--hue) 57% 53%);
+    --title-color: hsl(var(--hue) 41% 10%);
     --text-color: hsl(0 0% 46%);
     --text-color-light: hsl(0 0% 98%);
     --body-color: hsl(0 0% 98%);
@@ -32,27 +35,74 @@ body {
     font: 400 1rem 'DM Sans', sans-serif;
     color: var(--text-color);
     background: var(var(--base-color));
-    -webkit-font-smoothing: auto;
+    -webkit-font-smoothing: antialiased;
 }
 
 h1 {
     font: 700 1.875rem 'Popping', sans-serif;
     color: var(--title-color);
+    -webkit-font-smoothing: auto;
 }
 
 .button {
+    background: var(--base-color);
+    color: var(--text-color-light);
+    height: 3.5rem;
+    display: inline-flex;
+    align-items: center;
+    padding: 0 2rem;
+    border-radius: 0.25rem;
+    font: 500 1rem 'DM Sans', sans-serif;
+    transition: background 0.3s;
+}
+
+.button:hover {/* Quando o mouser passar em cima*/
+    background: var(--base-color-alt);
+}
+
+.divider-1 {
+    height:  1px;
+    background: linear-gradient(
+        270deg,
+        hsla(var(--hue), 36%, 57%, 1) 0%,
+        hsla(var(--hue), 65%, 88%, 0.34) 100%
+    );
 }
 
 /* ==== Layout =====================================*/
+.container {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem
+}
+
+.grid {
+    display: grid;
+    gap: 2rem; /*espaçamento entre os elementos*/
+}
+
+.section {
+    padding: 5rem 0;
+}
+
 #header { 
     border-bottom: 1px solid #e4e4e4;
+    margin-bottom: 2rem;
+    display: flex;
+    /*Fixar o header*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: var(--base-color-second);
+    width: 100%;
 }
 
 nav {
+    height: var(--header-height);
     display: flex;
-    height: 4.5rem;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 }
 
 .logo {
@@ -64,33 +114,32 @@ nav {
     color: var(--base-color);
 }
 
-.container {
-    width: 100%;
-    margin-left: 1.5rem;
-    margin-right: 1.5rem;
-}
-
-.grid {
-    display: grid;
-    gap: 2rem; /*espaçamento entre os elementos*/
-}
-
-.section {
-    padding: 0.5rem 0;
+main {
+    margin-top: px;
 }
 
 /* ==== Home =====================================*/
+#home {
+    overflow: hidden;
+}
+
 #home .container {
     margin: 0;
 }
 
+#home .image {
+    position: relative;
+}
+
 #home .image::before {/*Criando o elemento antes da imagem*/
     content: '';
-    height: 2rem;
-    width: 2rem;
-    background: rebeccapurple;
+    height: 100%;
+    width: 100%;
+    background: var(--base-color);
     position: absolute;
-    top: 0;
+    top: -16.8%;
+    left: 16.7%;
+    z-index: 0;
 }
 
 #home .image img {
@@ -98,7 +147,21 @@ nav {
     right: 2.93rem;
 }
 
+#home .image img, 
+#home .image::before {
+    border-radius: 0.25rem;
+}
+
 #home .text {
     margin-left: 1.5rem;
     margin-right: 1.5rem;
+    text-align: center;
+}
+
+#home .text h1 {
+    margin-bottom: 1rem;
+}
+
+#home .text p {
+    margin-bottom: 2rem;
 }
