--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+ul {
+    list-style: none;
+}
+
 a {
     text-decoration: none;
 }
@@ -38,7 +42,7 @@ body {
     -webkit-font-smoothing: antialiased;
 }
 
-h1 {
+.title {
     font: 700 1.875rem 'Popping', sans-serif;
     color: var(--title-color);
     -webkit-font-smoothing: auto;
@@ -97,14 +101,11 @@ h1 {
     width: 100%;
 }
 
-nav {
-    height: var(--header-height);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
+main {
+    margin-top: calc(var(--header-height) + 2rem)
 }
 
+/* ==== Logo =====================================*/
 .logo {
     font: 700 1.31rem 'Poppins', sans-serif;
     color: var(--title-color);
@@ -114,8 +115,46 @@ nav {
     color: var(--base-color);
 }
 
-main {
-    margin-top: px;
+/* ==== Navigation =====================================*/
+nav {
+    height: var(--header-height);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+nav ul li {
+    text-align: center;
+}
+
+nav .menu {
+    opacity: 0;
+    visibility: hidden;
+}
+
+/* Mostrar menu */
+nav.show .menu {
+    opacity: 1;
+    visibility: visible;
+
+    background: var(--body-color);
+
+    height: 100vh;
+    width: 100vw;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+nav.show .menu {
+    display: grid;
+    place-content: center;
+}
+
+nav.show ul.grid {
+    gap: 4rem;
 }
 
 /* ==== Home =====================================*/
