--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ img {
 }
 
 /* ==== Base =====================================*/
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font: 400 1rem 'DM Sans', sans-serif;
     color: var(--text-color);
@@ -123,6 +127,11 @@ body {
     width: 100%;
 }
 
+#header.scroll {
+    background: var(--body-color);
+    box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+}
+
 main {
     margin-top: calc(var(--header-height) + 2rem)
 }
@@ -182,6 +191,12 @@ nav ul li a:hover {
 nav .menu {
     opacity: 0;
     visibility: hidden;
+    top: -20rem;
+    transition: 0.3s;
+}
+
+nav .menu ul {
+    display: none;
 }
 
 /* Mostrar menu */
@@ -197,11 +212,13 @@ nav.show .menu {
     position: fixed;
     top: 0;
     left: 0;
-}
 
-nav.show .menu {
     display: grid;
     place-content: center;
+}
+
+nav.show .menu ul {
+    display: grid;
 }
 
 nav.show ul.grid {
@@ -220,13 +237,16 @@ nav .icon-close {
     opacity: 0;
 
     position: absolute;
+    top: -1.5rem;
     right: 1.5rem;
     /* Transição diferenciada */
+    transition: 0.2s;
 }
 
 nav.show .icon-close {
     visibility: visible;
     opacity: 1;
+    top: 1.5rem;
 }
 
 /* ==== Home =====================================*/
@@ -328,4 +348,19 @@ nav.show .icon-close {
 .card {
     padding:3.625rem 2rem;
     box-shadow: 0px 0px 12px rgba(0,0,0,0.08);
+    border-bottom: 0.25rem solid var(--base-color);
+    border-radius: 0.25rem 0.25rem 0 0;
+    text-align: center;
+}
+
+.card i {
+    display: block;
+    margin-bottom: 1.5rem;
+    font-size: 5rem;
+    color: var(--base-color);
+}
+
+.card .title {
+    font-size:  1.5rem;
+    margin-bottom: 0.75rem;
 }
