--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?l1qw9u');
-  src:  url('fonts/icomoon.eot?l1qw9u#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?l1qw9u') format('truetype'),
-    url('fonts/icomoon.woff?l1qw9u') format('woff'),
-    url('fonts/icomoon.svg?l1qw9u#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?e2zbq5');
+  src:  url('fonts/icomoon.eot?e2zbq5#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?e2zbq5') format('truetype'),
+    url('fonts/icomoon.woff?e2zbq5') format('woff'),
+    url('fonts/icomoon.svg?e2zbq5#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
