--- a/style.css
+++ b/style.css
@@ -146,6 +146,10 @@ main {
     color: var(--base-color);
 }
 
+.logo-alt span {
+    color: var(--body-color);
+}
+
 /* ==== Navigation =====================================*/
 nav {
     height: var(--header-height);
@@ -454,3 +458,52 @@ nav.show .icon-close {
     color: var(--base-color);
 }
 
+/* ==== Footer ====================================*/
+footer {
+    background: var(--base-color);
+}
+
+footer .logo {
+    display: inline-block;
+    margin-bottom: 1.5rem;
+}
+
+footer .brand p {
+    color: var(--text-color-light);
+    margin-bottom: 1rem;
+}
+
+footer i {
+    font-size:  1.5rem;
+    color: var(--text-color-light);
+}
+
+footer .social a {
+    margin-right: 2rem;
+}
+
+/* Back to top */
+.back-to-top {
+    background: var(--base-color);
+    color: var(--text-color-light);
+    
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+
+    padding:0.5rem;
+    clip-path: circle();
+
+    font-size: 1rem;
+    line-height: 0;
+
+    visibility: hidden;
+    opacity: 0;
+
+    transition:.3s;
+}
+
+.back-to-top.show {
+    visibility: visible;
+    opacity: 1;
+}
