--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ img {
     --text-color: hsl(0 0% 46%);
     --text-color-light: hsl(0 0% 98%);
     --body-color: hsl(0 0% 98%);
+
+    /* fonts */
+    --title-font-size: 1.875rem;
 }
 
 /* ==== Base =====================================*/
@@ -40,7 +43,7 @@ html {
 }
 
 body {
-    font: 400 1rem 'DM Sans', sans-serif;
+    font: 400 var(--title-font-size) 'DM Sans', sans-serif;
     color: var(--text-color);
     background: var(var(--base-color));
     -webkit-font-smoothing: antialiased;
@@ -480,6 +483,12 @@ footer i {
 
 footer .social a {
     margin-right: 2rem;
+    transition: 0.3s;
+    display: inline-block; /*quando a teg é a ele nã aceita colocar movimento, então add display*/
+}
+
+footer .social a:hover {
+    transform: translateY(-10px); /*quando passar o mouse em cima*/
 }
 
 /* Back to top */
@@ -501,9 +510,24 @@ footer .social a {
     opacity: 0;
 
     transition:.3s;
+    transform: translateY(100%);
 }
 
 .back-to-top.show {
     visibility: visible;
     opacity: 1;
+    transform: translateY(0);
 }
+
+/*========= MEDIA QUERIES =========*/
+/* Responsive */
+/* extra large devices: 1200 > */
+
+/* large devices: 1023 > */
+/* large devices: 992 > */
+@media (min-width: 992px) {
+    :root {
+      --title-font-size: 2.2rem;
+    }
+  }
+  /* medium devices: 767 > */
